--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.18.50",
     "@types/react": "^17.0.65",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.2",
     "axios": "^1.5.0",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
